syntax = "proto3";
package petri.tokenmint.v1beta1;

import "gogoproto/gogo.proto";
import "petri/tokenmint/v1beta1/mint.proto";
import "petri/tokenmint/v1beta1/params.proto";

option go_package = "github.com/petrichormoney/petri/x/tokenmint/types";

message GenesisState {
  repeated TokenMint tokenMint = 1
  [(gogoproto.moretags) = "yaml:\"tokenMint\"", (gogoproto.nullable) = false];
  Params params = 2 [(gogoproto.nullable) = false];
}
